fixed register not working properly implemented cruises activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="login_failed_toast">Login failed</string>
     <string name="fragment_login__forgotten_password_text_view">Forgot your password?</string>
     <string name="fragment_login_login_failed">Login failed</string>
+    <string name="fragment_cuises_no_cruises_found_toast">No crusies found</string>
 </resources>
