fixed register not working properly implemented cruises activity basic map implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="fragment_login__forgotten_password_text_view">Forgot your password?</string>
     <string name="fragment_login_login_failed">Login failed</string>
     <string name="fragment_cuises_no_cruises_found_toast">No crusies found</string>
+    <string name="fragment_cruise_details_no_data_toast">Failed to load cruise</string>
 </resources>
