--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="list_item_user_email_text">Email</string>
     <string name="fragment_roll_call_added_toast">Successfully added</string>
     <string name="fragment_roll_call_removed_toast">Successfully removed</string>
+    <string name="fragment_roll_call_add_me_button">Add me</string>
+    <string name="fragment_roll_call_remove_me_button">Remove me</string>
 </resources>
